force-app/main/default/objects/LLC_BI__Debt__c/fields/Accrued_Interest_Expense__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_Expense__c</fullName>
    <label>Accrued Interest Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>