force-app/main/default/objects/LLC_BI__Debt__c/fields/Accrued_Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_Percent__c</fullName>
    <label>Accrued Interest Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>