force-app/main/default/objects/LLC_BI__Debt__c/fields/Annual_Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>Annual_Debt_Service__c</fullName>
    <label>Annual Debt Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>