force-app/main/default/objects/LLC_BI__Debt__c/fields/Annual_Interest_Expense__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Expense__c</fullName>
    <label>Annual Interest Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>