force-app/main/default/objects/LLC_BI__Debt__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>