force-app/main/default/objects/LLC_BI__Debt__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <label>Creditor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>