force-app/main/default/objects/LLC_BI__Debt__c/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <label>Current Interest Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>