force-app/main/default/objects/LLC_BI__Debt__c/fields/Current_Notes_Bank__c.field-meta.xml
<CustomField>
    <fullName>Current_Notes_Bank__c</fullName>
    <label>Current Notes Bank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>