force-app/main/default/objects/LLC_BI__Debt__c/fields/Interest_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Interest_Per_Year__c</fullName>
    <label>Interest Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>