force-app/main/default/objects/LLC_BI__Debt__c/fields/Intermediate_Portion_Other__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Portion_Other__c</fullName>
    <label>Intermediate Portion Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>