force-app/main/default/objects/LLC_BI__Debt__c/fields/Liability_Type__c.field-meta.xml
<CustomField>
    <fullName>Liability_Type__c</fullName>
    <label>Liability Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>