force-app/main/default/objects/LLC_BI__Debt__c/fields/Long_Term_Portion_Bank__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Portion_Bank__c</fullName>
    <label>Long Term Portion Bank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>