force-app/main/default/objects/LLC_BI__Debt__c/fields/Monthly_Payment_Calc__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Calc__c</fullName>
    <label>Monthly Payment Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>