force-app/main/default/objects/LLC_BI__Debt__c/fields/No_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments__c</fullName>
    <label>No. of Payments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>