force-app/main/default/objects/LLC_BI__Debt__c/fields/Reported_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Reported_Monthly_Payment__c</fullName>
    <label>Reported Monthly Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>