force-app/main/default/objects/LLC_BI__Debt__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>