force-app/main/default/objects/LLC_BI__Debt__c/fields/Term_months__c.field-meta.xml
<CustomField>
    <fullName>Term_months__c</fullName>
    <label>Term (months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>